[package]
name = "basecamp"
version = "0.1.0"
authors = ["Ben Kenawell <ben@benkenawell.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.8", features = ["blocking", "json"] }
oauth2 = "3.0.0"
url = "2.1.1"
serde = { version = "1.0", features = ["derive"] }